<resources>
    <string name="app_name">My First App</string>
    <string name="edit_message">Enter a message</string>
    <string name="Home">Home</string>
    <string name="Devices">Devices</string>
    <string name="Switched">Switched On</string>
    <string name="switched_on">SWITCHED ON</string>
    <string name="DevicesTitle">Devices</string>
    <string name="SwitchedOnTitle">Switched On</string>
    <string name="button_create">Create</string>
    <string name="action_favorite">action_favorite</string>
    <string name="action_settings">action_settings</string>
    <string name="Español">Español</string>
    <string name="English">English</string>
    <string name="action_notification">action_notification</string>
    <string name="Status">Status</string>
    <string name="Cancel">Cancel</string>
    <string name="Accept">Accept</string>

    <string-array name="AcMode">
        <item>Cool</item>
        <item>Heat</item>
        <item>Fan</item>
    </string-array>

    <string-array name="AcVS">
        <item>Auto</item>
        <item>22°</item>
        <item>45°</item>
        <item>67°</item>
        <item>90°</item>
    </string-array>

    <string-array name="AcHS">
        <item>Auto</item>
        <item>-90°</item>
        <item>-45°</item>
        <item>0°</item>
        <item>45°</item>
        <item>90°</item>
    </string-array>

    <string-array name="AcFs">
        <item>Auto</item>
        <item>25</item>
        <item>50</item>
        <item>75</item>
        <item>100</item>
    </string-array>

    <string-array name="OvenMode">
        <item>Conventional</item>
        <item>Bottom</item>
        <item>Top</item>
    </string-array>

    <string-array name="OvenGrillMode">
        <item>Large</item>
        <item>Eco</item>
        <item>Off</item>
    </string-array>

    <string-array name="OvenConvMode">
        <item>Normal</item>
        <item>Eco</item>
        <item>Off</item>
    </string-array>

    <string-array name="FridgeMode">
        <item>Default</item>
        <item>Vacation</item>
        <item>Party</item>
    </string-array>

    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>


    <string name="Temperature">Temperature</string>
    <string name="Mode">Mode</string>
    <string name="VerticalSwing">VerticalSwing</string>
    <string name="HorizontalSwing">HorizontalSwing</string>
    <string name="FanSpeed">Fan Speed</string>
    <string name="LockState">Lock State</string>
    <string name="On">On</string>
    <string name="Off">Off</string>
    <string name="Open">Open</string>
    <string name="Closed">Closed</string>
    <string name="Locked">Locked</string>
    <string name="Unlocked">Unlocked</string>
    <string name="FreezerTemp">Freezer Temp</string>
    <string name="Brightness">Brightness</string>
    <string name="HeatMode">HeatMode</string>
    <string name="GrillMode">GrillMode</string>
    <string name="ConvMode">ConvMode</string>
    <string name="Languaje">Language</string>
    <string name="Settings">Settings</string>
    <string name="Notifications">Notifications</string>
    <string name="Description">Description</string>
    <string name="NotiBlinds">Blinds</string>
    <string name="NotiBlindsOpen">The blinds are open</string>
    <string name="NotiBlindsClosed">The blinds are closed</string>
    <string name="NotiDoorOpen">The door is open</string>
    <string name="NotiDoorClosed">The door is closed</string>
    <string name="NotiDoorLock">The door is locked</string>
    <string name="NotiDoorUnlocked">The door is unlocked</string>
    <string name="NotiFridgeTemp">The temperature has been changed</string>
    <string name="NotiFridgeFreezer">The freezer temperature has been changed</string>
    <string name="NotiFridgeMode">The fridge mode has been changed</string>
    <string name="NotiAcStatusOn">The Ac is on</string>
    <string name="NotiAcStatusOff">The Ac is off</string>
    <string name="NotiAcMode">The mode has been changed</string>
    <string name="NotiAcTemperature">The temperature has been changed</string>
    <string name="NotiAcVS">The angle of vertical swing has been changed</string>
    <string name="NotiAcHS">The angle of horizontal swing has been changed</string>
    <string name="NotiAcFS">The fan speed has been changed</string>
    <string name="NotiOvenOn">The oven is on</string>
    <string name="NotiOvenOff">The oven is off</string>
    <string name="NotiOvenTemp">The temperature has been changed</string>
    <string name="NotiOvenHeat">The heat mode has been changed</string>
    <string name="NotiOvenGrill">The grill mode has been changed</string>
    <string name="NotiOvenConv">The convection mode has been changed</string>
    <string name="NotiLampOn">The lamp is on</string>
    <string name="NotiLampOff">The lamp is off</string>
    <string name="NotiLampBright">The brightness has been changed</string>
    <string name="errorConnection">Connection error</string>
    <string name="errorTemperatureFridge">Fridge: Temperature must be between 2 and 8 grades</string>
    <string name="errorTemperatureFreezerFridge">Fridge: Freezer temperature must be between -20 and -8 grades</string>
    <string name="info">Information</string>
    <string name="BothErrorsFridge">Fridge: Freezer Temperature must be between -20 and -8 grades \n \n Fridge: Temperature must be between 2 and 8 grades</string>
    <string name="ErrorOven">Oven: Temperature must be between 90 and 230 grades</string>
    <string name="ErrorAc">Ac: Temperature must be between 18 and 38 grades</string>
    <string name="ErrorLamp">Lamp: Brightness must be between 0 and 100</string>
    <string name="NotiColor">The color has been changed</string>


</resources>
