<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/DeviceToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="455dp"
        android:layout_marginBottom="3dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/smart_house_logo_transparent" />
    </FrameLayout>

    <TextView
        android:id="@+id/OvenTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="TextView"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DeviceToolbar" />

    <TextView
        android:id="@+id/OvenDescription"
        android:layout_width="wrap_content"
        android:layout_height="27dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="15dp"
        android:text="TextView"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/OvenTitle" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:text="@string/Status"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/StatusOven"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:text="@string/Temperature"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/TemperatureOven"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:text="@string/HeatMode"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/HeatMode"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/GrillMode"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/GrillMode"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:text="@string/ConvMode"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/ConvMode"
        app:layout_constraintLeft_toLeftOf="parent" />

    <ToggleButton
        android:id="@+id/StatusOven"
        android:layout_width="130dp"
        android:layout_height="45dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="10dp"
        android:text="ToggleButton"
        android:textOff="@string/Off"
        android:textOn="@string/On"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/OvenDescription" />

    <EditText
        android:id="@+id/TemperatureOven"
        android:layout_width="130dp"
        android:layout_height="45dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="number"
        android:text="Temperature"
        android:textSize="14sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/StatusOven" />

    <Spinner
        android:id="@+id/HeatMode"
        android:layout_width="130dp"
        android:textSize="20sp"
        android:layout_height="45dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="10dp"
        android:entries="@array/OvenMode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TemperatureOven" />

    <Spinner
        android:id="@+id/GrillMode"
        android:layout_width="130dp"
        android:layout_height="45dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:entries="@array/OvenGrillMode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/HeatMode" />

    <Spinner
        android:id="@+id/ConvMode"
        android:layout_width="130dp"
        android:layout_height="45dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:entries="@array/OvenConvMode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/GrillMode" />

    <Button
        android:id="@+id/AcceptOven"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:onClick="acceptOven"
        android:text="@string/Accept"
        android:textColor="@android:color/background_light"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>
